Documentation/Pollstr_grammar.tex
\documentclass{article}
\usepackage{fullpage}
\usepackage{syntax}
\usepackage{listings}

\title{Pollstr Grammar}
\author{Jayme Woogerd}
\date{November 1, 2014}

\setlength{\grammarindent}{6em}

\begin{document}

\maketitle
\thispagestyle{empty}

\begin{grammar}

    <survey>     ::= "survey"  <upper> <statement>* <section>* "end" <upper>

    <statement>  ::= <decl> | <item>

    <section>    ::= "section" <upper> <statement>* <section>* "end" <lower>

    <delc>       ::= <questDelc> | <respDecl>

    <respDecl>   ::= "response" <lower> "=" <respExp>

    <questDecl>  ::= "question" <lower> "=" <questExp>

    <respExp>    ::= "{" (<stringLit>) ("," <stringLit>)* "}"

    <questExp>   ::= <stringLit>

    <item>       ::= <itemID>":" <question> <response> (<skipTo>)

    <question>   ::= <questExp> | <lower>

    <response>   ::= <respExp> | <lower>

    <skipTo>     ::= "skipTo" "(" <itemID>"," <response> ")"

    <itemID>     ::= "Q"<lower>

    <upper> ::= <identifier> with capitalized first character
    
    <lower>      ::= <identifier> with lowercase first character

    <stringLit>  ::= As defined in Text.Parsec.Token

    <identifier> ::= As defined in Text.Parsec.Token

    <whiteSpace> ::= As defined in Text.Parsec.Token


\end{grammar}


\end{document}
